# integral_number_calculator

./: CMakeLists.txt  README.md  build.sh
src/arithmetic/: arithmetic_expression_parser.cpp  arithmetic_expression_parser.hpp  arithmetic_operation.cpp  arithmetic_operation.hpp  reverse_polish_notation.cpp  reverse_polish_notation.hpp
src/main/: main.cpp
src/utils/: custom_exceptions.hpp  utils.cpp  utils.hpp
test/integration/: calculate_arithmetic_expression_test.cpp
test/src/arithmetic/: arithmetic_expression_parser_test.cpp  arithmetic_operation_test.cpp  reverse_polish_notation_test.cpp
test/utils/: test_utils.hpp
